--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Myapp",
+  "name": "WeatherApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,32 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.0.4",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "react": "18.2.0",
-    "react-native": "0.71.0",
-    "react-native-analog-clock": "^0.3.1",
-    "react-native-clock-analog": "^0.0.3",
+    "react-native": "0.71.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-get-location": "^2.2.1",
-    "react-native-permissions": "^3.6.1",
-    "react-native-reanimated": "^2.14.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-sound": "^0.11.2",
-    "react-native-view-slider": "^1.1.1",
-    "react-native-weather-api": "^3.4.0",
-    "react-navigation": "^4.4.4",
-    "scrapy": "^0.0.1"
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.14.0",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
@@ -44,7 +33,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.5",
+    "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
